# jungleroom

./: .gitmodules  AttinyStepper.py  README.md  ServoBoard.py  ServoPi.py  jungleroom.py  prepare_env.sh
attiny_stepper/: CMakeLists.txt  attiny_stepper.c  compile_and_flash.sh
globe_board/: CMakeLists.txt  IRremote.cpp  IRremote.h  IRremoteInt.h  Mp3Player.cpp  Mp3Player.h  TMRpcm.cpp  TMRpcm.h  globe_board.fzz  globe_board.ino
globe_board/TMRpcm/: TMRpcm.cpp  TMRpcm.h
globe_board/doc/: ControlMP3PLayer.ino  SimpleTest.ino
icsp_board/: icsp_board.fzz
servo_board/: CMakeLists.txt  IR.cpp  servo_board.fzz  servo_board.ino
sounds/: chimp.aiff  copyright.txt  hyena.au
